--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,10 +1,13 @@
 .intro {
     min-height: 100vh;
     position: relative;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .intro__socials {
-    padding-left: 40px;
+   
     padding-top: 100px;
 }
 
