--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,13 +1,12 @@
 .main {
-  margin: 0, auto;
-
+  width: 100%;
+ 
   z-index: 1;
   scroll-snap-type: y mandatory;
 }
 
 .main__section {
-  padding-left: 150px;
-  padding-right: 150px;
+
   box-sizing: border-box;
 }
 
@@ -16,6 +15,14 @@
   background-image: var(--introbg);
   background-size: cover;
   background-position: top;
+ 
+}
+
+.main__about {
+  
+background: linear-gradient(256.35deg, #E3E8E2 0%, #ECEBE7 91.6%);
+  height: 100vh;
+ 
 }
 
 .noselect {
