--- a/src/const/localstyles.css
+++ b/src/const/localstyles.css
@@ -9,12 +9,23 @@
     --color-grey: #CBCDCA;
   }
   
-  .h2 {
+  .h1{
     color:var(--color-font);
     font-size: 64px;
     font-weight: 700;
     line-height: 72px; 
     margin: 0;
+    text-align: center;
+  
+  }
+
+  .h2 {
+    color:var(--color-font);
+    font-size: 58px;
+    font-weight: 700;
+    line-height: 64px; 
+    margin: 0;
+    text-align: center;
   
   }
   
@@ -25,6 +36,7 @@
     line-height: 40px; 
     margin: 0;
     padding-top: 16px;
+    text-align: center;
   }
   
   .h4 {
@@ -41,5 +53,6 @@
     font-weight: 400;
     line-height: 24px;
     margin: 0;
+    padding-top: 20px;
   }
   
