--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -1,6 +1,6 @@
 .accordion {
   width: 100%;
-  height: 950px;
+  height: 970px;
   display: flex;
   box-sizing: border-box;
   padding-left: 300px;
@@ -79,6 +79,7 @@
 
 .panel[aria-expanded="false"] {
   padding-left: 0;
+
 }
 
 .panel__label {
@@ -92,8 +93,10 @@
   cursor: pointer;
   margin: 0;
   padding: 0;
-  transition: 0.7s cubic-bezier(0.5, 0, 0, 1);
-  z-index: 3;
+  padding-top: 460px;
+  transition: 0.7s all cubic-bezier(0.5, 0, 0, 1);
+  z-index: 1;
+
 }
 
 .panel__label_horizontal {
@@ -108,28 +111,32 @@
 .panel[aria-expanded="true"] .panel__label {
   height: 0;
   opacity: 0;
-  display: none;
+  
+z-index: -1;
+  transition: .1s opacity cubic-bezier(0.5, 0, 0, 1);
+
 }
 
 .panel__title {
-  margin: 0;
-  writing-mode: vertical-rl;
-  height: 100%;
-  padding-top: 70px;
+  margin: 0;  
+  height: 100%; 
   font-weight: 700;
-  font-size: 40px;
-  color: white;
-  text-align: left;
-  transform: rotate(180deg);
+  font-size: 40px;  
+  text-align: right;  
   box-sizing: border-box;
-  text-shadow: 0 0 60px #444;
+
+
 }
+
+
+
+
 
 @media screen and (max-width: 1600px) {
   .panel__title {
     font-size: 30px;
     line-height: 48px;
-    max-width: 800px;
+  
   }
 }
 
@@ -137,7 +144,7 @@
   .panel__title {
     font-size: 20px;
     line-height: 48px;
-    max-width: 800px;
+  
   }
 }
 
@@ -150,24 +157,9 @@
 
 .panel__label:hover {
   color: #12abdb;
-  opacity: 0.7;
-}
-.panel__title:after,
-.panel__title:before {
-  content: "";
-  position: absolute;
-  left: 0px;
-  bottom: 100px;
-  width: 50px;
-  height: 2px;
-  margin-top: -2px;
-  background-color: #12abdb;
-  opacity: 0.6;
+  opacity: 0.5;
 }
 
-.panel__title:before {
-  transform: rotate(-90deg);
-}
 
 .panel__inner {
   width: 100%;
@@ -176,10 +168,10 @@
   position: relative;
   margin: 0;
   background: transparent;
-  background-position: bottom -100px right -420px;
-  background-size: 1100px;
+  background-position: top 150px left 0;
+  background-size: 450px;
   background-repeat: no-repeat;
-  transition: 0.7s width cubic-bezier(0.5, 0, 0, 1);
+  transition: .7s width cubic-bezier(0.5, 0, 0, 1);
 }
 
 @media screen and (max-width: 1600px) {
@@ -210,12 +202,16 @@
 .panel__content-wrapper {
   position: absolute;
   opacity: 0;
-  box-sizing: border-box;
-  max-width: 600px;
+  box-sizing: border-box;  
   transition: 0.7s all cubic-bezier(0.5, 0, 0, 1);
   will-change: transform, opacity;
-  z-index: 2;
-  padding-top: 50px;
+  z-index: 0;
+  padding-top: 40px;
+}
+
+.panel__content-wrapper[aria-expanded="true"] {
+  
+  z-index: 5;
 }
 
 @media screen and (max-width: 1200px) {
@@ -238,12 +234,19 @@
   }
 }
 
+.panel__content {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1200px;
+}
+
 .panel__subtitle {
-  color: white;
+  color: var( --color-font);
   font-size: 60px;
   margin: 0;
   font-weight: 700;
-  padding: 0px 0 60px 50px;
+  padding: 0;
   max-width: 580px;
 }
 
@@ -279,6 +282,10 @@
   }
 }
 
+.panel__subtitle_span {
+  max-width: 580px;
+}
+
 .panel__subtitle_disable {
   display: none;
 }
@@ -287,7 +294,7 @@
   font-size: 40px;
   font-weight: 700;
   margin: 0;
-  padding: 20px 0 10px 50px;
+  padding: 300px 0 10px 50px;
   max-width: 450px;
 }
 
@@ -317,10 +324,10 @@
   }
 }
 
-.panel__content {
-  color: white;
-  font-size: 24px;
-  line-height: 32px;
+.panel__description {
+  color: var( --color-font);
+  font-size: 18px;
+  line-height: 26px;
   font-weight: 400;
 
   width: 500px;
@@ -328,7 +335,7 @@
 }
 
 @media screen and (max-width: 1600px) {
-  .panel__content {
+  .panel__description {
     font-size: 18px;
     line-height: 24px;
     width: 430px;
@@ -336,7 +343,7 @@
 }
 
 @media screen and (max-width: 650px) {
-  .panel__content {
+  .panel__description {
     font-size: 18px;
     line-height: 24px;
     width: 300px;
@@ -344,19 +351,19 @@
 }
 
 @media screen and (max-width: 380px) {
-  .panel__content {
+  .panel__description {
     font-size: 16px;
     line-height: 24px;
     width: 250px;
   }
 }
 
-.panel__content_horizontal {
+.panel__description_horizontal {
   width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
-  .panel__content_horizontal {
+  .panel__description_horizontal {
     font-size: 14px;
     line-height: 20px;
     width: 350px;
@@ -364,7 +371,7 @@
 }
 
 @media screen and (max-width: 650px) {
-  .panel__content_horizontal {
+  .panel__description_horizontal {
     font-size: 14px;
     line-height: 20px;
     width: 350px;
@@ -373,7 +380,7 @@
 }
 
 @media screen and (max-width: 380px) {
-  .panel__content_horizontal {
+  .panel__description_horizontal {
     font-size: 12px;
     line-height: 18px;
     width: 250px;
