--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,10 +1,10 @@
 .button {
-  width: 200px;
-  height: 70px;
+  width: var(--width);
+  height: var(--height);
   background-image: var(--normal);
   background-color: transparent;
+  background-size: var(--width) var(--height);
   border:none;
-  
   position: relative;
   padding: 0;
   margin: 0;
@@ -18,6 +18,8 @@
   font-size: 24px;
   font-weight: 700;
   color:#ffffff;
+  text-align: center;
+  padding-left: 10px;
 }
 
 .button:hover {
@@ -31,15 +33,15 @@
   top: 0;
   left: 0;
   width: 0;
-  height: 70px;
+  height: 100%;
   background-image: var(--hover);
-  
+  background-size: var(--width) var(--height);
   transition: all 0.4s cubic-bezier(0.65, 0, 0.076, 1);
   
 }
 
 .button:hover.button::before{
-  width: 200px;
+  width: 100%;
 }
 
 .button:active {
