--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -41,6 +41,9 @@
 }
 
 
+.main__slider {
+  background-color: var(--color-font);
+}
 
 
 
@@ -51,4 +54,9 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  
+  -webkit-user-drag: none; 
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
