add footer 0.9 faq refs

--- a/src/components/Socials/Socials.css
+++ b/src/components/Socials/Socials.css
@@ -7,27 +7,37 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 50px;
+    max-width: fit-content;
+}
+
+.socials__list_row {
+  flex-direction: row;
 }
 
 .socials__item{
-    min-height: 50px;
+    min-height: 40px;
+    width: 40px;
 }
 
 .socials__link {
     text-decoration: none;
 }
 
+.socials__ico {
+  width: 40px;
+  height: 40px;
+}
 
 .socials__item {
   transition: ease-in-out .4s;
+ 
 }
 
 .socials__item:hover {
   transform: scale(1.15);  
-  filter: drop-shadow(0 0 10px var(--color-accent));
+  filter: drop-shadow(0 0 6px var(--color-accent));
 }
 
 .socials__link:active {
-  filter: drop-shadow(0 0 15px var(--color-accent));
+  filter: drop-shadow(0 0 10px var(--color-accent));
 }
