--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -4,7 +4,7 @@
   margin-right: auto;
   padding-top: 100px;
   padding-bottom: 100px;
-  min-height: 80vh;
+  min-height: 70vh;
 }
 
 .faq__title {
@@ -13,7 +13,7 @@
 
 .faq__list {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   
 padding-top: 80px;
   gap: 30px;
@@ -36,7 +36,8 @@ padding-top: 80px;
 
 .faq__item-title {
   position: relative;
-  padding-left: 10px;
+  padding-left: 60px;
+  box-sizing: border-box;
   font-size: 24px;
   line-height: 40px;
   font-weight: 400;
@@ -70,7 +71,7 @@ background-size: contain;
   height: 30px;
   position: absolute;
   top: 6px;
-  left: -40px;
+  left: 0px;
   border-radius: 50%;
   transition: all 0.4s ease-in-out;
 }
