--- a/src/components/Navigation/navbar.css
+++ b/src/components/Navigation/navbar.css
@@ -1,16 +1,20 @@
 .box-menu {
-  position: absolute;
-  right: 40px;
+  position: fixed;
+  right: 30px;
   top: 10px;
   cursor: pointer;
-  background: #f58b6c;
+  /* background: #f58b6c; */
+  background: var(--color-accent);
   width: 50px;
   height: 50px;
   box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.3);
   border-radius: 30px;
-  transition: width 0.4s, height 0.5s;
+  transition: width 0.4s, height 0.5s , opacity ease-in-out .4s;
   overflow: hidden;
+
 }
+
+
 
 .full-menu {
   height: 400px;
@@ -81,28 +85,14 @@
 .menu a {
   white-space: nowrap;
   position: relative;
-  display: inline-block;
-  color: #333;
+  display: inline-block;  
   text-decoration: none;
   width: 220px;
   height: 48px;
   line-height: 48px;
 }
 
-.menu a::after {
-  content: '';
-  position: absolute;
-  left: 0px;
-  width: 15px;
 
-  background: #000;
-  transition: height 0.3s, top 0.3s;
-  transform: rotateZ(43deg);
-}
-.menu a.active::after {
-  top: 19px;
-  height: 20px;
-}
 
 .menu a span {
   opacity: 0;
@@ -124,7 +114,7 @@
 }
 
 .full-menu .menu a:hover span {
-  opacity: 1;
+  color: var(--color-secondary)
 }
 
 .full-menu .menu a span {
