--- a/src/components/Wakesurf/Wakesurf.css
+++ b/src/components/Wakesurf/Wakesurf.css
@@ -7,18 +7,21 @@
 
 
 .wakesurf__info {
-  width: 900px;
+ 
   background-image: var(--wakesurf);
   background-size: 932px 997px;
   background-repeat: no-repeat;
   background-position: bottom;
   height: 900px;
   padding-top: 120px;
-  margin-left: 90px;
+  padding-left: 100px;
+  padding-right: 100px;
+  margin-left: 50px;
+  
 }
 
 .wakesurf__board {
-  display: flex;
+  display: flex;  
   flex-direction: column;
   align-items: center;
   padding-top: 100px;
