--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -7,6 +7,14 @@
   min-height: 70vh;
 }
 
+@media screen and (max-width: 1600px) {
+  .faq  {
+    max-width: 1350px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
 .faq__title {
 
 }
@@ -48,12 +56,7 @@ padding-top: 80px;
   transition: text-shadow 0.4s ease-in-out;
 }
 
-@media screen and (max-width: 1600px) {
-  .faq__item-title {
-    font-size: 20px;
-    line-height: 26px;
-  }
-}
+
 
 @media screen and (max-width: 650px) {
   .faq__item-title {
@@ -112,19 +115,13 @@ background-size: contain;
   margin: 0;
   max-height: 0;
   overflow: hidden;
-  padding-left: 40px;
-  padding-top: 10px;
+  padding-left: 80px;
+  padding-top: 14px;
   transition: all 0.4s cubic-bezier(0.65, 0, 0.076, 1);
 
 }
 
-@media screen and (max-width: 1600px) {
-  .faq__dropdown {
-    font-size: 14px;
-    line-height: 20px;
-    max-width: 600px;
-  }
-}
+
 
 @media screen and (max-width: 650px) {
   .faq__dropdown {
