--- a/src/components/ImagePopup/ImagePopup.css
+++ b/src/components/ImagePopup/ImagePopup.css
@@ -1,84 +1,211 @@
 .popup {
-    display: flex;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    
-    backdrop-filter: blur(10px);
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
-    opacity: 0;
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0; 
+  transition: visibility 0.5s cubic-bezier(0.5, 0, 0, 1);
+  z-index: 6;
+}
 
-    z-index: 6;
+.popup__image-container {
+  background: #ecece7;
+  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.35);
+  border-radius: 10px 10px 100px 10px;
+  position: relative;
+  width: 75%;
+  height: 95%;
+}
+
+/* @media screen and (max-width: 1600px) {
+  .popup__image-container { 
+    width: 1100px;
+    height: 750px;
   }
+} */
 
-  .popup__image-container {
-    background: #ECECE7;
-    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.35);
-    border-radius: 10px 10px 100px 10px;   
-    position: relative; 
-    width: 1400px;
-    height: 900px;      
-  }
+.popup__slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  flex-direction: column;
+  width: 100%;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-top: 40px;
+  box-sizing: border-box;
+}
 
-  .popup.popup_is-opened {
-    visibility: visible;
-    opacity: 1;
-    background: rgba(14, 42, 54, 0.2);
-    transition: visibility 0.4s, opacity 0.3s ease-in-out;
-  }
+.popup.popup_is-opened {
+  visibility: visible;
+  opacity: 1;
+  background: rgba(14, 42, 54, 0.2);
+}
 
+.popup__image {
+  width: 100%;
+  object-fit: cover;
+  max-height: 650px;
+  pointer-events: none;
+  border-radius: 15px;
+}
+
+ @media screen and (max-width: 1600px) {
   .popup__image {
-    max-width: 85vw;
-    max-height: 85vh;
-    pointer-events: none;
-  }
+   
+    max-height: 500px;
 
-  .popup__image-title {
-    font-weight: 700;
-    font-size: 18px;
-   
-    color: #FFFFFF;
-    padding-top: 20px;
-    margin: 0;
-    max-width: 650px;
-   
   }
+}
+
+
+@media screen and (max-width: 1400px) {
+  .popup__image {
+   
+    max-height: 400px;
+
+  }
+} 
+
+.popup__image-title {
+  align-self: baseline;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 80px;
+  color: var(--color);
+
+  padding-bottom: 20px;
+  margin: 0;
+}
+
+@media screen and (max-width: 1600px) {
+  .popup__image-title {
+ 
+    font-size: 52px;
+    line-height: 60px;
+    color: var(--color);  
+    padding-bottom: 15px;  
+  }
+} 
 
 .popup__close-button {
-    background: url(../../images/cross.png);
-    background-size: 100px 100px;
-    border: none;  
-    cursor: pointer;
-    background-position: center;
-    position: absolute; 
-    width: 100px;
-    height: 100px;  
-    top: 10px;
-    right: 10px;  
-    padding: 0;
-    outline: none; 
-  }
-  
-  .popup__close-button:hover {
-    
-    border-color: rgba(255, 255, 255, 0.6);
-  }
-  
-  
-  @media screen and (max-width:768px) {
-    .popup__close-button {
-      right: 0;
-      width: 21px;
-      height: 21px;    
-    }
-  }
+  background: url(../../images/cross.png);
+  background-size: 100px 100px;
+  border: none;
+  cursor: pointer;
+  background-position: center;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 10px;
+  right: 10px;
+  padding: 0;
+  outline: none;
+  opacity: 1;
+}
 
-  .image-popup {
-    background: rgba(1, 45, 73, 0.8);
+.popup__close-button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../../images/cross-hover.png);
+  opacity: 0;
+  transition: opacity 0.4s cubic-bezier(0.5, 0, 0, 1);
+}
+
+.popup__close-button:hover::before {
+  opacity: 1;
+}
+
+.popup__close-button:active {
+  transform: scale(1.2);
+}
+
+@media screen and (max-width: 768px) {
+  .popup__close-button {
+    right: 0;
+    width: 21px;
+    height: 21px;
   }
+}
+
+.popup__button {
+  background: transparent;
+  border: none;
+  padding: 10px;
+  outline: none;
+  transition: all 0.2s cubic-bezier(0.5, 0, 0, 1);
+}
+
+.popup__slider-button_prev {
+  position: absolute;
+  top: 45%;
+  left: 0px;
+}
+
+.popup__slider-button_next {
+  position: absolute;
+  top: 45%;
+  right: 0px;
+}
+
+.image-popup {
+  background: rgba(1, 45, 73, 0.8);
+}
+.popup__navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  padding-top: 20px;
+}
+
+.popup__navbar {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.popup__nav-image {
+  width: 70px;
+  height: 50px;
+  object-fit: cover;
+  cursor: pointer;
+  border-radius: 5px;
+  box-sizing: border-box;
+  transition: transform 0.3s cubic-bezier(0.5, 0, 0, 1);
+}
+
+
+.popup__nav-image_current {
+  filter: drop-shadow(0 0 10px var(--color));
+}
+
+.popup__nav-image:not(.popup__nav-image_current):hover {
+  transform: translateY(-8px);
+}
+
+
+.popup__image-counter {
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--color-font);
+  margin-left: auto;
+  width: 40px;
+}
