--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,6 @@
 .main {
   width: 100%;
-
+  background: linear-gradient(256.35deg, #e3e8e2 0%, #ecebe7 91.6%);
   z-index: 1;
   scroll-snap-type: y mandatory;
 }
@@ -13,6 +13,16 @@
   background-image: var(--introbg);
   background-size: cover;
   background-position: top;
+  background-repeat: no-repeat;
+
+}
+
+@media screen and (max-width: 1400px) {
+  .main__intro {
+
+    background-position: top -30px left 0;
+  }
+  
 }
 
 .main__about {
@@ -54,16 +64,4 @@
   background: linear-gradient(256.35deg, #e3e8e2 0%, #ecebe7 91.6%);
 }
 
-.noselect {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 
-  -webkit-user-drag: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-}
