--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,19 +1,44 @@
 .slider {
     position: relative;
-    
     color: #ffffff;
 
 }
 
 .slider__titles {
     position: absolute;
-    top: -80px;
+    top: -95px;
     left: 45%;
     display: flex;
     max-width: 40%;
     justify-content: space-between;
     width: 100%;
     list-style: none;
+}
+
+@media screen and (max-width: 1600px) {
+  .slider__titles {
+
+    left: 50%;
+    display: flex;
+    max-width: 45%;
+    justify-content: space-between;
+    width: 100%;
+    list-style: none;
+}
+  
+}
+
+@media screen and (max-width: 1400px) {
+  .slider__titles {
+    top: -70px;
+    left: 10%;
+    display: flex;
+    max-width: 75%;
+    justify-content: space-between;
+    width: 100%;
+    list-style: none;
+}
+  
 }
 
 .slider__title {
@@ -57,6 +82,7 @@
 
 .slider-item {
   padding: 0 40px;
+  
 }
 
 .slider-item__columns {
@@ -134,7 +160,7 @@
 .slider-item__description {
 
   max-width: 570px;
-  padding-bottom: 45px;
+  min-height: 140px;
   color: #ffffff !important;
 }
 
@@ -192,9 +218,10 @@
   border: none;
   padding: 10px;
   outline: none;
-  transition: all 0.2s cubic-bezier(0.65, 0, 0.076, 1);
-  
+  transition: all 0.2s cubic-bezier(0.65, 0, 0.076, 1);  
 }
+
+
 
 .slider__button:active {
   filter: drop-shadow(0 0 10px var(--color-accent));
