--- a/src/components/Wakesurf/Wakesurf.css
+++ b/src/components/Wakesurf/Wakesurf.css
@@ -6,17 +6,39 @@
 }
 
 
-.wakesurf__info {
- 
+.wakesurf__info { 
   background-image: var(--wakesurf);
   background-size: 932px 997px;
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: bottom ;
   height: 900px;
   padding-top: 120px;
   padding-left: 100px;
   padding-right: 100px;
-  margin-left: 50px;
+  margin-left: 50px;  
+}
+
+@media screen and (max-width: 1800px) {
+  .wakesurf__info { 
+    padding-top: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: 0px;  
+    background-size: cover;
+    height: auto;
+  }
+  
+}
+
+@media screen and (max-width: 1400px) {
+  .wakesurf__info { 
+    padding-top: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: 0px;  
+    background-size: cover;
+    height: auto;
+  }
   
 }
 
@@ -27,13 +49,43 @@
   padding-top: 100px;
 }
 
+@media screen and (max-width: 1800px) {
+  .wakesurf__board {
+    display: flex;  
+    flex-direction: column;
+    align-items: center;
+    padding-top: 80px;
+  }  
+  
+}
+
+
+
 .wakesurf__subtitle {
 padding-bottom: 20px;
 }
 
 
+@media screen and (max-width: 1800px) {
+  .wakesurf__subtitle {
+    padding-bottom: 10px;
+    }
+   
+  
+}
+
+
 .wakesurf__desc-tabs {
   padding-bottom: 40px;
+}
+
+
+@media screen and (max-width: 1800px) {
+  .wakesurf__desc-tabs {
+    padding-bottom: 20px;
+  }
+   
+  
 }
 
 .wakesurf__photos-img {
@@ -47,7 +99,25 @@ padding-bottom: 20px;
   padding-top: 20px;
 }
 
+@media screen and (max-width: 1800px) {
+  .wakesurf__contact { 
+    padding-top: 0px;
+    padding-left: 10px;
+   flex-direction: column;
+   align-items: center;
+  }
+}
+
+
 .wakesurf__callme {
   align-self:flex-end;
   
+}
+
+@media screen and (max-width: 1800px) {
+  .wakesurf__callme {
+    padding-top: 10px;
+    align-self:center;
+    
+  }
 }
