--- a/src/components/Сertificates/Сertificates.css
+++ b/src/components/Сertificates/Сertificates.css
@@ -6,6 +6,22 @@
   padding-bottom: 80px;
 }
 
+@media screen and (max-width: 1600px) {
+  .certificates {
+
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .certificates {
+
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
 .certificates__columns {
   display: flex;
   justify-content: space-between; 
@@ -27,6 +43,24 @@
   
 }
 
+
+@media screen and (max-width: 1400px) {
+  .certificates__column_right {
+    padding-left: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  
+}
+
 .certificates__img {
   width: 100%;
+}
+
+@media screen and (max-width: 1400px) {
+  .certificates__img {
+    width: 80%;
+  }
+  
 }
