--- a/src/const/localstyles.css
+++ b/src/const/localstyles.css
@@ -20,6 +20,17 @@
   
   }
 
+  @media screen and (max-width: 1400px) {
+    .h1{
+    
+      font-size: 58px;
+      
+      line-height: 68px; 
+  
+    
+    }
+  }
+
   .h2 {
     color:var(--color-font);
     font-size: 58px;
@@ -29,7 +40,7 @@
     text-align: center;  
   }
 
-  @media screen and (max-width: 1500px) {
+  @media screen and (max-width: 1400px) {
     .h2 {
       font-size: 48px;
       font-weight: 700;
@@ -48,10 +59,11 @@
     text-align: center;
   }
 
-  @media screen and (max-width: 1500px) {
+  @media screen and (max-width: 1400px) {
     .h3 {
       font-size: 24px;     
       line-height: 32px; 
+      padding-top: 8px;
     }
   }
   
@@ -73,3 +85,16 @@
     
   }
   
+  .noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  
+    -webkit-user-drag: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+  }
